--- a/app/RFQ_Components/Courier/Courier.html
+++ b/app/RFQ_Components/Courier/Courier.html
@@ -11,13 +11,13 @@
 
     <div>
       <label>Shipping Term</label>
-      <select class="form-control mb-3" formControlName="Shipping_Term">
+      <select #shippingTermField class="form-control mb-3" formControlName="Shipping_Term">
         <option *ngFor="let term of terms" [ngValue]="term">{{ term }}</option>
       </select>
     </div>
-    <div>
+    <div *ngIf="(showHideShippingTerm(shippingTermField) && shippingTermField.value.slice(3) === 'Incoterm')">
       <label>Incoterm</label>
-      <select class="form-control mb-3" formControlName="Incoterm">
+      <select (change)="getIncotermValue($event)" class="form-control mb-3" formControlName="Incoterm">
         <option *ngFor="let term of incoterms" [ngValue]="term">{{ term }}</option>
       </select>
     </div>
@@ -43,29 +43,63 @@
     </div>
 
     <div>
-      <label for="pickup_country"></label>
+      <label for="pickup_country">Pickup Country</label>
       <input id="pickup_country" type="text" placeholder="Pickup Country" class="form-control mb-3" formControlName="Pickup_Country">
     </div>
     <div>
       <label for="delivery_country">Delivery Country</label>
       <input id="delivery_country" type="text" placeholder="Delivery Country" class="form-control mb-3" formControlName="Delivery_Country">
     </div>
-    <div>
-      <label for="pickup_address">Pickup Address</label>
-      <input id="pickup_address" type="text" placeholder="Pickup Address" class="form-control mb-3" formControlName="Pickup_Address">
+    <div *ngIf="((showHideShippingTerm(shippingTermField) && shippingTermField.value.slice(3) === 'Door to Door') || target_value === 'PA')">
+      <div *ngIf="target_value !== '-None-'">
+        <label for="pickup_address">Pickup Address</label>
+        <input id="pickup_address" type="text" placeholder="Pickup Address" class="form-control mb-3" formControlName="Pickup_Address">
+      </div>
     </div>
-    <div>
+    <div *ngIf="((showHideShippingTerm(shippingTermField) && shippingTermField.value.slice(3) === 'Door to Door') || target_value === 'DA')">
       <label for="delivery_address">Delivery Address</label>
       <input id="delivery_address" type="text" placeholder="Delivery Address" class="form-control mb-3" formControlName="Delivery_Address">
     </div>
-    <div>
+    <div *ngIf="((showHideShippingTerm(shippingTermField) && shippingTermField.value.slice(3) === 'Port to Port') || target_value === 'POL')">
       <label for="pol_loading">POL Port Of Loading</label>
       <input id="pol_loading" type="text" placeholder="POL Port of Loading" class="form-control mb-3" formControlName="POL_Port_of_Loading">
     </div>
-    <div>
+    <div *ngIf="((showHideShippingTerm(shippingTermField) && shippingTermField.value.slice(3) === 'Port to Port') || target_value === 'POL')">
       <label for="pol_discharge">POL Port Of Discharge</label>
       <input id="pol_discharge" type="text" placeholder="POL Port of Discharge" class="form-control mb-3" formControlName="POD_Port_of_Discharge">
     </div>
+
+    <!-- Display Totals in Realtime -->
+    <table class="table text-center total-table">
+      <thead>
+        <tr>
+          <th scope="col">Total Number of Packages</th>
+          <th scope="col">Total Dimensional Weight</th>
+          <th scope="col">Total Net Weight</th>
+          <th scope="col">Total Gross Weight</th>
+          <th scope="col">Total Chargeable Weight</th>
+        </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>
+          <input value="0" class="form-control" type="text" readonly id="total-quantity">
+        </td>
+        <td>
+          <input value="0" class="form-control" type="text" readonly id="total-dimensional">
+        </td>
+        <td>
+          <input value="0" class="form-control" type="text" readonly id="total-net-weight">
+        </td>
+        <td>
+          <input value="0" class="form-control" type="text" readonly id="total-gross-weight">
+        </td>
+        <td>
+          <input value="0" class="form-control" type="text" readonly id="total-chargeable-weight">
+        </td>
+      </tr>
+      </tbody>
+    </table>
 
     <!-- Nested Items -->
     <div class="childs">
@@ -85,22 +119,22 @@
             <tbody>
               <tr class="child-form" formGroupName="child">
                 <td>
-                  <input class="form-control" type="number" formControlName="Quantity" placeholder="Quantity">
+                  <input class="form-control quantities" value="0" type="number" formControlName="Quantity" placeholder="Quantity">
                 </td>
                 <td>
-                  <input class="form-control" type="number" formControlName="Length" placeholder="Length (cm)">
+                  <input class="form-control length" type="number" formControlName="Length" placeholder="Length (cm)">
                 </td>
                 <td>
-                  <input class="form-control" type="number" formControlName="Width" placeholder="Width_cm">
+                  <input class="form-control width" type="number" formControlName="Width" placeholder="Width (cm)">
                 </td>
                 <td>
-                  <input class="form-control" type="number" formControlName="Height" placeholder="Height_cm">
+                  <input class="form-control height" type="number" formControlName="Height" placeholder="Height (cm)">
                 </td>
                 <td>
-                  <input class="form-control" type="number" formControlName="Net_Weight" placeholder="Net_Weight_kg">
+                  <input class="form-control net-weight" type="number" formControlName="Net_Weight" placeholder="Net Weight (kg)">
                 </td>
                 <td>
-                  <input class="form-control" type="number" formControlName="Gross_Weight" placeholder="Gross_Weight_kg">
+                  <input class="form-control gross-weight" type="number" formControlName="Gross_Weight" placeholder="Gross Weight (kg)">
                 </td>
                 <td>
                   <button id="1" type="button" class="add-btn btn btn-primary">+</button>
@@ -111,6 +145,9 @@
       </div>
     </div>
 
-    <input type="submit" class="btn btn-outline-primary">
+    <input [ngModel]="setStatus" type="hidden" formControlName="Status">
+
+    <button (click)="submitStatus($event)" type="submit" id="New" class="btn btn-primary d-inline-block">Create</button>
+    <button (click)="submitStatus($event)" type="submit" id="Draft" class="btn btn-outline-dark d-inline-block ml-3">Draft</button>
   </div>
 </form>
