--- a/app/RFQ_Components/Trucking_FTL/TruckingFTL.html
+++ b/app/RFQ_Components/Trucking_FTL/TruckingFTL.html
@@ -11,13 +11,13 @@
 
     <div>
       <label>Shipping Term</label>
-      <select class="form-control mb-3" formControlName="Shipping_Term">
+      <select #shippingTermField class="form-control mb-3" formControlName="Shipping_Term">
         <option *ngFor="let term of terms" [ngValue]="term">{{ term }}</option>
       </select>
     </div>
-    <div>
+    <div *ngIf="(showHideShippingTerm(shippingTermField) && shippingTermField.value.slice(3) === 'Incoterm')">
       <label>Incoterm</label>
-      <select class="form-control mb-3" formControlName="Incoterm">
+      <select (change)="getIncotermValue($event)" class="form-control mb-3" formControlName="Incoterm">
         <option *ngFor="let term of incoterms" [ngValue]="term">{{ term }}</option>
       </select>
     </div>
@@ -53,30 +53,31 @@
     </div>
 
     <div>
-      <label for="pickup_country"></label>
+      <label for="pickup_country">Pickup Country</label>
       <input id="pickup_country" type="text" placeholder="Pickup Country" class="form-control mb-3" formControlName="Pickup_Country">
     </div>
     <div>
       <label for="delivery_country">Delivery Country</label>
       <input id="delivery_country" type="text" placeholder="Delivery Country" class="form-control mb-3" formControlName="Delivery_Country">
     </div>
-    <div>
+    <div *ngIf="((showHideShippingTerm(shippingTermField) && shippingTermField.value.slice(3) === 'Door to Door') || target_value === 'PA')">
       <label for="pickup_address">Pickup Address</label>
       <input id="pickup_address" type="text" placeholder="Pickup Address" class="form-control mb-3" formControlName="Pickup_Address">
     </div>
-    <div>
+    <div *ngIf="((showHideShippingTerm(shippingTermField) && shippingTermField.value.slice(3) === 'Door to Door') || target_value === 'DA')">
       <label for="delivery_address">Delivery Address</label>
       <input id="delivery_address" type="text" placeholder="Delivery Address" class="form-control mb-3" formControlName="Delivery_Address">
     </div>
-    <div>
+    <div *ngIf="((showHideShippingTerm(shippingTermField) && shippingTermField.value.slice(3) === 'Port to Port') || target_value === 'POL')">
       <label for="pol_loading">POL Port Of Loading</label>
       <input id="pol_loading" type="text" placeholder="POL Port of Loading" class="form-control mb-3" formControlName="POL_Port_of_Loading">
     </div>
-    <div>
+    <div *ngIf="((showHideShippingTerm(shippingTermField) && shippingTermField.value.slice(3) === 'Port to Port') || target_value === 'POL')">
       <label for="pol_discharge">POL Port Of Discharge</label>
       <input id="pol_discharge" type="text" placeholder="POL Port of Discharge" class="form-control mb-3" formControlName="POD_Port_of_Discharge">
     </div>
 
+    <!-- Nested Items -->
     <div class="childs">
       <div class="items">
         <table class="table table-hover">
@@ -114,6 +115,9 @@
       </div>
     </div>
 
-    <input type="submit" class="btn btn-outline-primary">
+    <input [ngModel]="setStatus" type="hidden" formControlName="Status">
+
+    <button (click)="submitStatus($event)" type="submit" id="New" class="btn btn-primary d-inline-block">Create</button>
+    <button (click)="submitStatus($event)" type="submit" id="Draft" class="btn btn-outline-dark d-inline-block ml-3">Draft</button>
   </div>
 </form>
